--- a/bookarea/package.json
+++ b/bookarea/package.json
@@ -8,9 +8,11 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
+    "npm": "^8.3.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "yarn": "^1.22.17"
   },
   "version": "0.1.0",
   "devDependencies": {
